# aoc-2023

./: .gitignore  Cargo.toml  README.md  pyproject.bak.toml  pyproject.toml
inputs/: d1p2.txt  d2p2.txt
py/: day6.py
src/: cli.rs  main.rs  solution.rs
src/day1/: part1.rs  part2.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day2/: mod.rs  part1.rs  part2.rs
src/day3/: part1.rs  part2.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
tests/: test_day12.py  test_day13.py
