[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.75"
nom = "7.1.3"
bytes = "1.5.0"
unreachable = "1.0.0"
regex = "1.10.2"
log = "0.4.20"
tqdm = "0.6.0"
num = "0.4.1"
itertools = "0.12.0"
