[project]
name = "aoc-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Soof Golan", email = "soofgolan@gmail.com" }
]
dependencies = [
    "regex~=2023.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
