[project]
name = "aoc-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Soof Golan", email = "soofgolan@gmail.com" }
]
dependencies = [
    "regex~=2023.10.3",
    "more_itertools>=10.1.0",
    "tqdm>=4.66.1",
    "libcst>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
